After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 767053 - nlecomposition: Fix race condition in seek handling causing deadlocks
nlecomposition: Fix race condition in seek handling causing deadlocks
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-editing-services
unspecified
Other All
: Normal normal
: 1.8.2
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2016-05-31 09:11 UTC by Sebastian Dröge (slomo)
Modified: 2016-06-01 17:55 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
nlecomposition: Fix race condition in seek handling causing deadlocks (1.85 KB, patch)
2016-05-31 09:11 UTC, Sebastian Dröge (slomo)
committed Details | Review
ges-testcase.c (6.77 KB, text/plain)
2016-05-31 09:12 UTC, Sebastian Dröge (slomo)
  Details

Description Sebastian Dröge (slomo) 2016-05-31 09:11:35 UTC
See commit message
Comment 1 Sebastian Dröge (slomo) 2016-05-31 09:11:39 UTC
Created attachment 328784 [details] [review]
nlecomposition: Fix race condition in seek handling causing deadlocks

We might receive another seek from the application while the action task is
handling a previous seek (and thus setting seeking_itself to TRUE). To prevent
this seek to go through directly instead of being added as an action, also
check if the seek event was received from our action task thread or some other
thread.
Comment 2 Sebastian Dröge (slomo) 2016-05-31 09:12:46 UTC
Created attachment 328785 [details]
ges-testcase.c

This deadlocks after a lot of scrub seeking with the seekbar, the attached patch fixes this.
Comment 3 Thibault Saunier 2016-05-31 14:01:16 UTC
Review of attachment 328784 [details] [review]:

Sounds good.
Comment 4 Sebastian Dröge (slomo) 2016-05-31 14:30:35 UTC
Attachment 328784 [details] pushed as 2ef72b7 - nlecomposition: Fix race condition in seek handling causing deadlocks
Comment 5 Sebastian Dröge (slomo) 2016-05-31 14:31:03 UTC
Should this also go into 1.8.2?
Comment 6 Thibault Saunier 2016-05-31 14:40:50 UTC
How confident are you that it does not introduce regression? :)
Comment 7 Sebastian Dröge (slomo) 2016-05-31 16:11:44 UTC
If I understand how nlecomposition works with the task/actions, then I'm sure that this won't break anything that wasn't broken before